# CMatrix

./: .gitignore  CMakeLists.txt  README.md  project-matrix.docx  ~$oject-matrix.docx
src/: CMatrix.hpp  Cexception.hpp  Cvector.hpp  demo.cpp  mytest.cpp  testcase.cpp
